--- a/AutoInputOnsite/AutoInputOnsite/AutoInputOnsite.vbproj
+++ b/AutoInputOnsite/AutoInputOnsite/AutoInputOnsite.vbproj
@@ -11,6 +11,7 @@
     <RootNamespace>AutoInputOnsite</RootNamespace>
     <AssemblyName>AutoInputOnsite</AssemblyName>
     <MyType>WindowsForms</MyType>
+    <ApplicationIcon>Aubergine_Greenstuff_eggplant_96px_517477_easyicon.net.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -50,23 +51,17 @@
     <Import Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AutoCsv.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AutoCsv.Designer.vb">
-      <DependentUpon>AutoCsv.vb</DependentUpon>
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="AutoImportCsv.Designer.vb">
       <DependentUpon>AutoImportCsv.vb</DependentUpon>
     </Compile>
     <Compile Include="AutoImportCsv.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Ninsyo.Designer.vb">
-      <DependentUpon>Ninsyo.vb</DependentUpon>
+    <Compile Include="Com.vb" />
+    <Compile Include="Menu.Designer.vb">
+      <DependentUpon>Menu.vb</DependentUpon>
     </Compile>
-    <Compile Include="Ninsyo.vb">
+    <Compile Include="Menu.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="RawWebBrowser.vb">
@@ -98,23 +93,19 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="AutoCsv.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>AutoCsv.vb</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="AutoImportCsv.resx">
       <SubType>Designer</SubType>
       <DependentUpon>AutoImportCsv.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Menu.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>Menu.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Ninsyo.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>Ninsyo.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="RawBrowserPopup.resx">
       <SubType>Designer</SubType>
@@ -162,6 +153,9 @@
       <WrapperTool>tlbimp</WrapperTool>
       <Isolated>False</Isolated>
     </COMReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Aubergine_Greenstuff_eggplant_96px_517477_easyicon.net.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
